# sheepyard-web

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  dev.md  docker-compose.yml  setup_agent.sh  test_validation.py
.agent/workflows/: timezone-handling.md
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml
apps/backend/: Dockerfile  auth.py  config.py  database.py  dependencies.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  security.py  tasks.py
apps/backend/managers/: connection_manager.py
apps/backend/routers/: auth.py  discord.py  polls.py  profile.py  users.py  votes.py  ws.py
apps/backend/services/: discord_service.py  mention_service.py  notification.py  poll_service.py  vote_service.py
apps/backend/tests/: conftest.py  test_api_polls.py  test_api_votes.py  test_discord_router.py  test_poll_service.py  test_profile.py  test_vote_service.py
apps/frontend/: Caddyfile  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
apps/frontend/src/: App.tsx
apps/frontend/src/auth/: store.ts
apps/frontend/src/components/: Background.tsx
apps/frontend/src/pages/: Dashboard.tsx  Login.tsx  Profile.tsx
apps/frontend/src/test/: PollCreate.test.tsx  PollDetail.test.tsx  PollList.test.tsx  dummy.test.ts  setup.ts
config/caddy/: Caddyfile
tasks/01_infrastructure/: database_setup.md  notification_interface.md
tasks/02_domain_poll/: poll_management.md
tasks/03_domain_voting/: vote_recording.md
tasks/04_frontend/: calendar_ui.md
(+30 files in other folders)
