[project]
name = "backend"
version = "0.1.0"
description = "FastAPI Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "httpx>=0.28.1",
    "python-jose[cryptography]>=3.5.0",
    "sqlmodel>=0.0.27",
    "pydantic-settings>=2.12.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.1",
]
